--- a/src/app/view/cadastro/cadastro.component.html
+++ b/src/app/view/cadastro/cadastro.component.html
@@ -16,6 +16,8 @@
                 <mat-label>Data de nascimento</mat-label>
                 <input matInput type="number" mask="00/00/0000" placeholder="dd/mm/yyyy">
             </mat-form-field>
+
+            <app-email></app-email>
         </form>
     </mat-card-content>
 </mat-card>
