feat: implementar consulta a API ViaCep

--- a/src/app/view/cadastro/cadastro.component.html
+++ b/src/app/view/cadastro/cadastro.component.html
@@ -4,7 +4,7 @@
         <form class="formulario">
             <mat-form-field class="example-full-width">
                 <mat-label>Nome</mat-label>
-                <input matInput placeholder="Ex. Pizza">
+                <input matInput placeholder="Seu nome completo">
             </mat-form-field>
 
             <mat-form-field class="example-full-width">
@@ -18,6 +18,8 @@
             </mat-form-field>
 
             <app-email></app-email>
+            <app-cep></app-cep>
+
         </form>
     </mat-card-content>
 </mat-card>
