refactor: componente e-mail imcorporado à cadastro
A lógica de componente do campo e-mail foi adicionado ao cadastro para implementar o alert dos campos obrigatorios.

--- a/src/app/view/cadastro/cadastro.component.html
+++ b/src/app/view/cadastro/cadastro.component.html
@@ -4,7 +4,11 @@
         <form class="formulario">
             <mat-form-field class="example-full-width">
                 <mat-label>Nome</mat-label>
-                <input matInput placeholder="Seu nome completo">
+                <input matInput type="text" [formControl]="nameFormControl" placeholder="Seu nome completo" required>
+                <mat-hint>Errors appear instantly!</mat-hint>
+                @if (nameFormControl.hasError('required')) {
+                  <mat-error>Name is <strong>required</strong></mat-error>
+                }
             </mat-form-field>
 
             <mat-form-field class="example-full-width">
@@ -17,7 +21,19 @@
                 <input matInput type="number" mask="00/00/0000" placeholder="dd/mm/yyyy">
             </mat-form-field>
 
-            <app-email></app-email>
+            <mat-form-field class="example-full-width">
+                <mat-label>Email</mat-label>
+                <input type="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
+                       placeholder="Ex. pat@example.com">
+                <mat-hint>Errors appear instantly!</mat-hint>
+                @if (emailFormControl.hasError('email') && !emailFormControl.hasError('required')) {
+                  <mat-error>Please enter a valid email address</mat-error>
+                }
+                @if (emailFormControl.hasError('required')) {
+                  <mat-error>Email is <strong>required</strong></mat-error>
+                }
+              </mat-form-field>
+
             <app-cep></app-cep>
 
         </form>
