--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,22 @@ body {
     background-color: var(--background-color-01);
     color:  var(--text-color);
 }
+
+.card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: aliceblue;
+}
+
+.card-test {
+    color: #493939;
+    background-color: rgba(0, 0, 0, 0.2); /* Preto com 20% de opacidade */
+}
+
+.formulario {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
