--- a/src/app/view/cadastro/cadastro.component.html
+++ b/src/app/view/cadastro/cadastro.component.html
@@ -4,37 +4,45 @@
         <form class="formulario">
             <mat-form-field class="example-full-width">
                 <mat-label>Nome</mat-label>
-                <input matInput type="text" [formControl]="nameFormControl" placeholder="Seu nome completo" required>
-                <mat-hint>Errors appear instantly!</mat-hint>
+                <input matInput [formControl]="nameFormControl" placeholder="Seu nome completo" required>
+                <mat-hint></mat-hint>
                 @if (nameFormControl.hasError('required')) {
-                  <mat-error>Name is <strong>required</strong></mat-error>
+                  <mat-error>Nome é <strong>obrigatório</strong></mat-error>
                 }
             </mat-form-field>
 
             <mat-form-field class="example-full-width">
                 <mat-label>CPF</mat-label>
-                <input matInput mask="000-000-000.00" placeholder="000-000-000.00">
+                <input matInput [formControl]="cpfFormControl" mask="000-000-000.00" placeholder="000-000-000.00" required>
+                <mat-hint></mat-hint>
+                @if (cpfFormControl.hasError('required')) {
+                    <mat-error>CPF é <strong>obrigatório</strong></mat-error>
+                  }
             </mat-form-field>
 
             <mat-form-field class="example-full-width">
                 <mat-label>Data de nascimento</mat-label>
-                <input matInput type="number" mask="00/00/0000" placeholder="dd/mm/yyyy">
+                <input matInput [formControl]="dataFormControl" mask="00/00/0000" placeholder="dd/mm/yyyy" required>
+                <mat-hint></mat-hint>
+                @if (dataFormControl.hasError('required')) {
+                    <mat-error>Data de nascimento é <strong>obrigatória</strong></mat-error>
+                  }
             </mat-form-field>
 
             <mat-form-field class="example-full-width">
                 <mat-label>Email</mat-label>
-                <input type="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
-                       placeholder="Ex. pat@example.com">
-                <mat-hint>Errors appear instantly!</mat-hint>
+                <input type="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher" placeholder="Ex. pat@example.com" required>
+                <mat-hint></mat-hint>
                 @if (emailFormControl.hasError('email') && !emailFormControl.hasError('required')) {
-                  <mat-error>Please enter a valid email address</mat-error>
+                  <mat-error>Por favor, insira um e-mail válido</mat-error>
                 }
                 @if (emailFormControl.hasError('required')) {
-                  <mat-error>Email is <strong>required</strong></mat-error>
+                  <mat-error>e-mail é <strong>obrigatório</strong></mat-error>
                 }
               </mat-form-field>
 
             <app-cep></app-cep>
+            <mat-hint></mat-hint>
 
         </form>
     </mat-card-content>
