--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,21 +19,12 @@ body {
     color:  var(--text-color);
 }
 
-.card-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: aliceblue;
+.campoForm {
+    width: 100%;
 }
 
-.card-test {
-    color: #493939;
-    background-color: rgba(0, 0, 0, 0.2); /* Preto com 20% de opacidade */
-}
-
-.formulario {
+.twoCol {
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    gap: 1rem;
 }
