feat: aplicar mascara campo CEP

--- a/src/app/view/cep/cep.component.html
+++ b/src/app/view/cep/cep.component.html
@@ -1,6 +1,6 @@
 <mat-form-field class="campoForm" [formGroup]="form">
     <mat-label>CEP</mat-label>
-    <input matInput class="form-control" formControlName="cep" id="cep" placeholder="00000-000" mask="00000-000" required/>
+    <input matInput class="form-control" formControlName="cep" id="cep" mask="00000-000" placeholder="00000-000" required/>
 </mat-form-field>
 
 <div class="twoCol">
