--- a/src/app/view/cadastro/cadastro.component.html
+++ b/src/app/view/cadastro/cadastro.component.html
@@ -4,7 +4,7 @@
         <form class="formulario">
           <mat-form-field class="campoForm">
             <mat-label>Nome</mat-label>
-            <input matInput [formControl]="nameFormControl" placeholder="Seu nome completo" required>
+            <input matInput type="text" (keyup)="filtroNome($event)" [formControl]="nameFormControl" placeholder="Seu nome completo" required>
             <mat-hint></mat-hint>
             @if (nameFormControl.hasError('required')) {
               <mat-error>Nome é <strong>obrigatório</strong></mat-error>
@@ -33,7 +33,7 @@
 
             <mat-form-field class="campoForm">
               <mat-label>e-mail</mat-label>
-              <input type="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher" placeholder="email@exemplo.com" required>
+              <input type="email" maxlength="200" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher" placeholder="email@exemplo.com" required>
               <mat-hint></mat-hint>
               @if (emailFormControl.hasError('email') && !emailFormControl.hasError('required')) {
                 <mat-error>Por favor, insira um e-mail válido</mat-error>
