feat: criar container home e botão para exibir cadastro de colaboradores

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <main class="content">
-  <app-cadastro></app-cadastro>
+  <!-- <app-cadastro></app-cadastro> -->
+   <app-home></app-home>
 </main>
 
 <!-- <mat-slide-toggle>Toggle me!</mat-slide-toggle> -->
