feat: implementar passagem de formulario entre componentes

--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -1,2 +1,3 @@
 <button mat-raised-button (click)="openDialog()">Pick one</button>
-<p>Nome recebido: {{ nomeRecebido }}</p>
+<p>Nome recebido: {{ formulario.nome }}</p>
+<p>CPF recebido: {{ formulario.cpf }}</p>
