--- a/src/app/view/cadastro/cadastro.component.html
+++ b/src/app/view/cadastro/cadastro.component.html
@@ -1,67 +1,51 @@
-<!-- <mat-card appearance="outlined" class="card-container">
+<mat-card appearance="outlined" class="card-container">
     <mat-card-content class="card">
         <h1>Cadastrar novo Colaborador</h1>
-        <form class="formulario">
+        <form class="formulario" [formGroup]="form">
           <mat-form-field class="campoForm">
             <mat-label>Nome</mat-label>
-            <input matInput type="text" (keyup)="filtroNome($event)" [formControl]="nameFormControl" placeholder="Seu nome completo" required>
+            <input matInput type="text" (keyup)="filtroNome($event)" formControlName="nome" placeholder="Seu nome completo" required>
             <mat-hint></mat-hint>
             @if (nameFormControl.hasError('required')) {
               <mat-error>Nome é <strong>obrigatório</strong></mat-error>
             }
           </mat-form-field>
 
-            <div class="twoCol">
-                <mat-form-field class="campoForm">
-                  <mat-label>CPF</mat-label>
-                  <input matInput [formControl]="cpfFormControl" mask="000-000-000.00" placeholder="000-000-000.00" required>
-                  <mat-hint></mat-hint>
-                  @if (cpfFormControl.hasError('required')) {
-                      <mat-error>CPF é <strong>obrigatório</strong></mat-error>
-                    }
-                </mat-form-field>
-
-                <mat-form-field class="campoForm">
-                  <mat-label>Data de nascimento</mat-label>
-                  <input matInput [formControl]="dataFormControl" mask="00/00/0000" placeholder="dd/mm/yyyy" required>
-                  <mat-hint></mat-hint>
-                  @if (dataFormControl.hasError('required')) {
-                      <mat-error>Data de nascimento é <strong>obrigatória</strong></mat-error>
-                    }
-                </mat-form-field>
-            </div>
-
+          <!-- <div class="twoCol"> -->
             <mat-form-field class="campoForm">
-              <mat-label>e-mail</mat-label>
-              <input type="email" maxlength="200" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher" placeholder="email@exemplo.com" required>
+              <mat-label>CPF</mat-label>
+              <input matInput formControlName="cpf" mask="000-000-000.00" placeholder="000-000-000.00" required>
               <mat-hint></mat-hint>
-              @if (emailFormControl.hasError('email') && !emailFormControl.hasError('required')) {
-                <mat-error>Por favor, insira um e-mail válido</mat-error>
-              }
-              @if (emailFormControl.hasError('required')) {
-                <mat-error>e-mail é <strong>obrigatório</strong></mat-error>
-              }
+              @if (cpfFormControl.hasError('required')) {
+                  <mat-error>CPF é <strong>obrigatório</strong></mat-error>
+                }
             </mat-form-field>
 
-            <app-cep></app-cep>
+            <!-- <mat-form-field class="campoForm">
+              <mat-label>Data de nascimento</mat-label>
+              <input matInput formControlName="data" mask="00/00/0000" placeholder="dd/mm/yyyy" required>
+              <mat-hint></mat-hint>
+              @if (dataFormControl.hasError('required')) {
+                  <mat-error>Data de nascimento é <strong>obrigatória</strong></mat-error>
+                }
+            </mat-form-field>
+          </div>
+
+          <mat-form-field class="campoForm">
+            <mat-label>e-mail</mat-label>
+            <input type="email" maxlength="200" matInput formControlName="email" [errorStateMatcher]="matcher" placeholder="email@exemplo.com" required>
             <mat-hint></mat-hint>
+            @if (emailFormControl.hasError('email') && !emailFormControl.hasError('required')) {
+              <mat-error>Por favor, insira um e-mail válido</mat-error>
+            }
+            @if (emailFormControl.hasError('required')) {
+              <mat-error>e-mail é <strong>obrigatório</strong></mat-error>
+            }
+          </mat-form-field>
 
-        </form>
-    </mat-card-content>
+          <app-cep></app-cep>
+          <mat-hint></mat-hint> -->
+      </form>
+      <button mat-raised-button (click)="salvarDados()">Salvar</button>
+  </mat-card-content>
 </mat-card>
-   -->
-
-   <form [formGroup]="form">
-    <mat-form-field class="campoForm">
-      <mat-label>Nome</mat-label>
-      <input matInput type="text" (keyup)="filtroNome($event)" formControlName="nome" placeholder="Seu nome completo" required>
-      <mat-hint></mat-hint>
-      @if (form.get('nome')?.hasError('required')) {
-        <mat-error>Nome é <strong>obrigatório</strong></mat-error>
-      }
-    </mat-form-field>
-  
-    <!-- Adicione outros campos do formulário aqui, se necessário -->
-  
-    <button mat-button (click)="salvarDados()">Salvar</button>
-  </form>
