--- a/src/app/view/cadastro/cadastro.component.scss
+++ b/src/app/view/cadastro/cadastro.component.scss
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     background-color: aliceblue;
 }
 
@@ -10,7 +9,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #493939;
     background-color: rgba(0, 0, 0, 0.2); /* Preto com 20% de opacidade */
 }
 
@@ -21,4 +19,9 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+}
+
+button {
+    height: 2.5rem;
+    width: 100%;
 }
