--- a/src/app/view/cadastro/cadastro.component.html
+++ b/src/app/view/cadastro/cadastro.component.html
@@ -51,8 +51,29 @@
             }
           </mat-form-field>
           
-
-          <app-cep [cepControl]="cepControl"></app-cep>
+          <div class="twoCol">
+            <mat-form-field class="campoForm" >
+                <mat-label>Logradouro</mat-label>
+                <input matInput class="form-control" formControlName="logradouro" id="logradouro" placeholder="Ex: Rua, Av., Travessa" />
+            </mat-form-field>
+            
+            <mat-form-field class="campoForm" >
+                <mat-label>Bairro</mat-label>
+                <input matInput formControlName="bairro" id="bairro" placeholder="Ex: Centro, Jardim, Vila" />
+            </mat-form-field>
+        </div>
+        
+        <div class="twoCol">
+            <mat-form-field class="campoForm" >
+                <mat-label>Cidade</mat-label>
+                <input matInput formControlName="cidade" id="cidade" placeholder="Ex: São Paulo" />
+            </mat-form-field>
+            
+            <mat-form-field class="campoForm" >
+                <mat-label>Estado</mat-label>
+                <input matInput formControlName="estado" id="estado" placeholder="Ex: SP, RJ" />
+            </mat-form-field>
+        </div>
       </form>
       <button mat-raised-button (click)="salvarDados()">Salvar</button>
   </mat-card-content>
