--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -1,11 +1,8 @@
-<!-- <p>Nome recebido: {{ formulario.nome }}</p>
-<p>CPF recebido: {{ formulario.cpf }}</p> -->
-
 <main class="home">
   <section class="search">
     <button mat-raised-button (click)="openDialog()">Adicionar Funcionário</button>
   </section>
-  
+
   <section class="tabela">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       <!-- Coluna Nome -->
@@ -20,16 +17,16 @@
         <td mat-cell *matCellDef="let element">{{ element.email }}</td>
       </ng-container>
     
-      <!-- Coluna CPF -->
-      <ng-container matColumnDef="cpf">
-        <th mat-header-cell *matHeaderCellDef>CPF</th>
-        <td mat-cell *matCellDef="let element">{{ element.cpf }}</td>
-      </ng-container>
-
       <!-- Coluna Idade -->
       <ng-container matColumnDef="idade">
         <th mat-header-cell *matHeaderCellDef>Idade</th>
         <td mat-cell *matCellDef="let element">{{ element.idade }}</td>
+      </ng-container>
+    
+      <!-- Coluna CPF -->
+      <ng-container matColumnDef="cpf">
+        <th mat-header-cell *matHeaderCellDef>CPF</th>
+        <td mat-cell *matCellDef="let element">{{ element.cpf }}</td>
       </ng-container>
     
       <!-- Coluna CEP -->
@@ -37,31 +34,31 @@
         <th mat-header-cell *matHeaderCellDef>CEP</th>
         <td mat-cell *matCellDef="let element">{{ element.cep }}</td>
       </ng-container>
-
-      <!-- Coluna logradouro -->
+    
+      <!-- Coluna Logradouro -->
       <ng-container matColumnDef="logradouro">
         <th mat-header-cell *matHeaderCellDef>Logradouro</th>
         <td mat-cell *matCellDef="let element">{{ element.logradouro }}</td>
       </ng-container>
     
-      <!-- Coluna bairro -->
+      <!-- Coluna Bairro -->
       <ng-container matColumnDef="bairro">
         <th mat-header-cell *matHeaderCellDef>Bairro</th>
         <td mat-cell *matCellDef="let element">{{ element.bairro }}</td>
       </ng-container>
-
+    
       <!-- Coluna Cidade -->
       <ng-container matColumnDef="cidade">
         <th mat-header-cell *matHeaderCellDef>Cidade</th>
         <td mat-cell *matCellDef="let element">{{ element.cidade }}</td>
       </ng-container>
-
+    
       <!-- Coluna Estado -->
       <ng-container matColumnDef="estado">
         <th mat-header-cell *matHeaderCellDef>Estado</th>
         <td mat-cell *matCellDef="let element">{{ element.estado }}</td>
       </ng-container>
-      
+    
       <!-- Linha de Cabeçalho -->
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <!-- Linhas de Dados -->
