--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -1,3 +1,6 @@
+<header>
+  <app-header></app-header>
+</header>
 <main class="home">
   <section class="search">
     <button mat-raised-button (click)="openDialog()">Adicionar Funcionário</button>
