--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,12 @@
     scroll-behavior: smooth;
 }
 
-html, body { height: 100%; }
+html, body {
+    height: 100vh;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
 
 body {
     margin: 0; 
