--- a/src/app/view/header/header.component.html
+++ b/src/app/view/header/header.component.html
@@ -4,5 +4,9 @@
         <img src="caminho/para/seu/../../../../../../assets/modalLogo.svg" alt="Logotipo">
         <img src="caminho/para/seu/../../../../../../assets/gptwLogo.png" alt="Logotipo">
       </div>
+      <div class="description">
+        <h1>Sistema de Cadastro de Pessoas</h1>
+        <img src="caminho/para/seu/../../../../../../assets/colab.png" alt="Logotipo">
+      </div>
     </div>
   </header>
