--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -3,7 +3,7 @@
 </header>
 <main class="home">
   <section class="search">
-    <button mat-raised-button (click)="openDialog()">Adicionar Funcionário</button>
+    <button mat-raised-button (click)="openDialog()" class="adicionar">Cadastrar Colaborador</button>
   </section>
 
   <section class="tabela">
