--- a/src/app/view/header/header.component.scss
+++ b/src/app/view/header/header.component.scss
@@ -1,20 +1,48 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+
 header {
-    background-color: #003C63;
+  width: 100%;
+    background-color: var(--main-color);
     padding: 20px 0;
-  
+
+    img {
+      max-height: 50px;
+    }
+
     .container {
-      width: 100%;
+      width: 95%;
       margin: 0 auto;
       display: flex;
+      justify-content: space-between;
       align-items: center;
   
       .logo {
         display: flex;
         gap: 1.5rem;
         padding: 0rem 2rem;
-        img {
-          max-height: 50px;
+      }
+      .description {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        h1 {
+          color: #fff;
         }
+
+        .logo {
+          display: flex;
+          gap: 1.5rem;
+          padding: 0rem 2rem;
+          img {
+            max-height: 50px;
+          }
       }
     }
   }
+}
