--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
+:root {
+    --main-color: #003C63;
+}
+
 /* Seletor universal:  */
 * {
     margin: 0;
