--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
+<header>
+  <app-header></app-header>
+</header>
 <main class="content">
-  <!-- <app-cadastro></app-cadastro> -->
-   <app-home></app-home>
+  <app-home></app-home>
 </main>
-
-<!-- <mat-slide-toggle>Toggle me!</mat-slide-toggle> -->
 
 <router-outlet></router-outlet>
