--- a/src/app/view/header/header.component.scss
+++ b/src/app/view/header/header.component.scss
@@ -1,9 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-
 header {
   width: 100%;
     background-color: var(--main-color);
@@ -31,8 +25,11 @@ header {
         justify-content: center;
         align-items: center;
         text-align: center;
+        gap: 1rem;
         h1 {
           color: #fff;
+          margin: 0;
+          padding: 0;
         }
 
         .logo {
