--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,11 @@
     scroll-behavior: smooth;
 }
 
+html {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 100%;
+}
+
 html, body {
     height: 100vh;
     width: 100%;
