--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -1,6 +1,3 @@
-<header>
-  <app-header></app-header>
-</header>
 <main class="home">
   <section class="search">
     <button mat-raised-button (click)="openDialog()" class="adicionar">Cadastrar Colaborador</button>
@@ -20,10 +17,10 @@
         <td mat-cell *matCellDef="let element">{{ element.email }}</td>
       </ng-container>
     
-      <!-- Coluna Idade -->
-      <ng-container matColumnDef="idade">
-        <th mat-header-cell *matHeaderCellDef>Idade</th>
-        <td mat-cell *matCellDef="let element">{{ element.idade }}</td>
+      <!-- Coluna Data -->
+      <ng-container matColumnDef="data">
+        <th mat-header-cell *matHeaderCellDef>Data de Nascimento</th>
+        <td mat-cell *matCellDef="let element">{{ element.data }}</td>
       </ng-container>
     
       <!-- Coluna CPF -->
