feat: corrigir passagem e calculo idade

--- a/src/app/view/cadastro/cadastro.component.html
+++ b/src/app/view/cadastro/cadastro.component.html
@@ -5,17 +5,11 @@
       <!-- Campo Nome -->
       <mat-form-field class="campoForm">
         <mat-label>Nome</mat-label>
-        <input
-          matInput
-          type="text"
-          (keyup)="filtroNome($event)"
-          formControlName="nome"
-          placeholder="Seu nome completo"
-          required
-        >
+        <input matInput type="text" (keyup)="filtroNome($event)" formControlName="nome" placeholder="Seu nome completo"
+          required>
         <mat-hint></mat-hint>
         @if (!validarNome() && form.get('nome')?.touched) {
-          <mat-error>Nome é <strong>obrigatório</strong></mat-error>
+        <mat-error>Nome é <strong>obrigatório</strong></mat-error>
         }
       </mat-form-field>
 
@@ -23,32 +17,20 @@
       <div class="twoCol">
         <mat-form-field class="campoForm">
           <mat-label>CPF</mat-label>
-          <input
-            matInput
-            formControlName="cpf"
-            mask="000.000.000-00"
-            placeholder="000.000.000-00"
-            required
-          >
+          <input matInput formControlName="cpf" mask="000.000.000-00" placeholder="000.000.000-00" required>
           <mat-hint></mat-hint>
           @if (!validarCpf() && form.get('cpf')?.touched) {
-            <mat-error>CPF é <strong>obrigatório</strong></mat-error>
+          <mat-error>CPF é <strong>obrigatório</strong></mat-error>
           }
         </mat-form-field>
 
         <!-- Campo Data de Nascimento -->
         <mat-form-field class="campoForm">
           <mat-label>Data de nascimento</mat-label>
-          <input
-            matInput
-            formControlName="data"
-            mask="00/00/0000"
-            placeholder="dd/mm/yyyy"
-            required
-          >
+          <input matInput formControlName="data" mask="00/00/0000" placeholder="dd/mm/yyyy" required>
           <mat-hint></mat-hint>
           @if (form.get('data')?.hasError('required') && form.get('data')?.touched) {
-            <mat-error>Data de nascimento é <strong>obrigatória</strong></mat-error>
+          <mat-error>Data de nascimento é <strong>obrigatória</strong></mat-error>
           }
         </mat-form-field>
       </div>
@@ -56,37 +38,24 @@
       <!-- Campo E-mail -->
       <mat-form-field class="campoForm">
         <mat-label>E-mail</mat-label>
-        <input
-          type="email"
-          maxlength="200"
-          matInput
-          formControlName="email"
-          [errorStateMatcher]="matcher"
-          placeholder="email@exemplo.com"
-          required
-        >
+        <input type="email" maxlength="200" matInput formControlName="email" [errorStateMatcher]="matcher"
+          placeholder="email@exemplo.com" required>
         <mat-hint></mat-hint>
         @if (form.get('email')?.hasError('email') && !form.get('email')?.hasError('required')) {
-          <mat-error>Por favor, insira um e-mail válido</mat-error>
+        <mat-error>Por favor, insira um e-mail válido</mat-error>
         }
         @if (form.get('email')?.hasError('required') && form.get('email')?.touched) {
-          <mat-error>E-mail é <strong>obrigatório</strong></mat-error>
+        <mat-error>E-mail é <strong>obrigatório</strong></mat-error>
         }
       </mat-form-field>
 
       <!-- Campo CEP -->
       <mat-form-field class="campoForm">
         <mat-label>CEP</mat-label>
-        <input
-          matInput
-          formControlName="cep"
-          mask="00000-000"
-          placeholder="00000-000"
-          required
-        >
+        <input matInput formControlName="cep" mask="00000-000" placeholder="00000-000" required>
         <mat-hint></mat-hint>
         @if (form.get('cep')?.hasError('required') && form.get('cep')?.touched) {
-          <mat-error>CEP é <strong>obrigatório</strong></mat-error>
+        <mat-error>CEP é <strong>obrigatório</strong></mat-error>
         }
       </mat-form-field>
 
@@ -94,40 +63,24 @@
       <div class="twoCol">
         <mat-form-field class="campoForm">
           <mat-label>Logradouro</mat-label>
-          <input
-            matInput
-            formControlName="logradouro"
-            placeholder="Ex: Rua, Av., Travessa"
-          >
+          <input matInput formControlName="logradouro" placeholder="Ex: Rua, Av., Travessa">
         </mat-form-field>
 
         <mat-form-field class="campoForm">
           <mat-label>Bairro</mat-label>
-          <input
-            matInput
-            formControlName="bairro"
-            placeholder="Ex: Centro, Jardim, Vila"
-          >
+          <input matInput formControlName="bairro" placeholder="Ex: Centro, Jardim, Vila">
         </mat-form-field>
       </div>
 
       <div class="twoCol">
         <mat-form-field class="campoForm">
           <mat-label>Cidade</mat-label>
-          <input
-            matInput
-            formControlName="cidade"
-            placeholder="Ex: São Paulo"
-          >
+          <input matInput formControlName="cidade" placeholder="Ex: São Paulo">
         </mat-form-field>
 
         <mat-form-field class="campoForm">
           <mat-label>Estado</mat-label>
-          <input
-            matInput
-            formControlName="estado"
-            placeholder="Ex: SP, RJ"
-          >
+          <input matInput formControlName="estado" placeholder="Ex: SP, RJ">
         </mat-form-field>
       </div>
     </form>
