--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -10,55 +10,55 @@
         <th mat-header-cell *matHeaderCellDef>Nome</th>
         <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
       </ng-container>
-    
+
       <!-- Coluna Email -->
       <ng-container matColumnDef="email">
         <th mat-header-cell *matHeaderCellDef>Email</th>
         <td mat-cell *matCellDef="let element">{{ element.email }}</td>
       </ng-container>
-    
+
       <!-- Coluna Data -->
-      <ng-container matColumnDef="data">
-        <th mat-header-cell *matHeaderCellDef>Data de Nascimento</th>
-        <td mat-cell *matCellDef="let element">{{ element.data }}</td>
+      <ng-container matColumnDef="idade">
+        <th mat-header-cell *matHeaderCellDef>Idade</th>
+        <td mat-cell *matCellDef="let element">{{ element.idade }}</td>
       </ng-container>
-    
+
       <!-- Coluna CPF -->
       <ng-container matColumnDef="cpf">
         <th mat-header-cell *matHeaderCellDef>CPF</th>
         <td mat-cell *matCellDef="let element">{{ element.cpf }}</td>
       </ng-container>
-    
+
       <!-- Coluna CEP -->
       <ng-container matColumnDef="cep">
         <th mat-header-cell *matHeaderCellDef>CEP</th>
         <td mat-cell *matCellDef="let element">{{ element.cep }}</td>
       </ng-container>
-    
+
       <!-- Coluna Logradouro -->
       <ng-container matColumnDef="logradouro">
         <th mat-header-cell *matHeaderCellDef>Logradouro</th>
         <td mat-cell *matCellDef="let element">{{ element.logradouro }}</td>
       </ng-container>
-    
+
       <!-- Coluna Bairro -->
       <ng-container matColumnDef="bairro">
         <th mat-header-cell *matHeaderCellDef>Bairro</th>
         <td mat-cell *matCellDef="let element">{{ element.bairro }}</td>
       </ng-container>
-    
+
       <!-- Coluna Cidade -->
       <ng-container matColumnDef="cidade">
         <th mat-header-cell *matHeaderCellDef>Cidade</th>
         <td mat-cell *matCellDef="let element">{{ element.cidade }}</td>
       </ng-container>
-    
+
       <!-- Coluna Estado -->
       <ng-container matColumnDef="estado">
         <th mat-header-cell *matHeaderCellDef>Estado</th>
         <td mat-cell *matCellDef="let element">{{ element.estado }}</td>
       </ng-container>
-    
+
       <!-- Linha de Cabeçalho -->
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <!-- Linhas de Dados -->
