feat: implementar segunda consulta a API de clima
Durante o teste prático, um dos requisitos foi fazer uma consulta a uma API de clima e exibir a temperatura e clima atual da cidade de acordo com o CEP já pesquisado. Utilizei a API da OpenWeather por ter um retorno similar a usada durante o teste.

--- a/src/app/view/cadastro/cadastro.component.html
+++ b/src/app/view/cadastro/cadastro.component.html
@@ -38,7 +38,7 @@
       <!-- Campo E-mail -->
       <mat-form-field class="campoForm">
         <mat-label>E-mail</mat-label>
-        <input type="email" maxlength="200" matInput formControlName="email" [errorStateMatcher]="matcher"
+        <input type="email" maxlength="200" matInput formControlName="email"
           placeholder="email@exemplo.com" required>
         <mat-hint></mat-hint>
         @if (form.get('email')?.hasError('email') && !form.get('email')?.hasError('required')) {
