--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -59,6 +59,18 @@
         <td mat-cell *matCellDef="let element">{{ element.estado }}</td>
       </ng-container>
 
+      <!-- Coluna Temperatura -->
+      <ng-container matColumnDef="temperatura">
+        <th mat-header-cell *matHeaderCellDef>Temperatura</th>
+        <td mat-cell *matCellDef="let element">{{ element.temperatura }}</td>
+      </ng-container>
+      
+      <!-- Coluna Clima -->
+      <ng-container matColumnDef="clima">
+        <th mat-header-cell *matHeaderCellDef>Clima</th>
+        <td mat-cell *matCellDef="let element">{{ element.clima }}</td>
+      </ng-container>
+
       <!-- Linha de Cabeçalho -->
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <!-- Linhas de Dados -->
